--- a/css/20880115.css
+++ b/css/20880115.css
@@ -2,6 +2,7 @@
 boostrap icon for icon you need
 link css cua thu vien phai de ben tren.
 link file css cua minh thi de phia duoi de overwrite len*/
+{
 body {
     font-family: 'Trebuchet MS', Arial, sans-serif;
     font-size: 16px;
@@ -196,4 +197,28 @@ h3{
 .about div > img {
     float: left;
     margin: 20px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 }
