--- a/css/20880115.css
+++ b/css/20880115.css
@@ -134,36 +134,9 @@ body {
     background: #73c926;
 }
 
-@media screen and (min-width: 768px) {
-    #menu li{ /* lam cho menu rong thi cach ra, nho thu gon lai */
-        margin-left: 25px;
-        padding: 0px;
-    }
-#logo {
-    position: relative;
-}
-
-#logo::after {
-    position: absolute;
-    content: "";
-    background: url(../images/logo_bg.png) 0 0 no-repeat;
-    width: 188px;
-    height: 133px;
-    bottom: -140px;
-    left: -2px;
-}
-#frm-search {
-    position: relative;
-}
-#frm-search::after {
-    position: absolute; /* vi tri tuyet doi, hinh tren di dau thi hinh duoi cung di theo */
-    content: "";
-    background: url(../images/search_bg.png) 0 0 no-repeat;
-    width: 230px;
-    height: 44px;
-    bottom: -73px;
-    left: 10px;
-}
+#menu li{ /* lam cho menu rong thi cach ra, nho thu gon lai */
+    margin-left: 25px;
+    padding: 0px;
 }
 
 /* main */ 
@@ -199,7 +172,104 @@ h3{
     margin: 20px;
 }
 
+#frm-signup {
+    border: 3px dashed #814e64;
+    padding: 20px 10px;
+    border-radius: 10px; /* bo cong */
+    overflow: auto;
+}
 
+#frm-signup h3 {
+    font-size: 30px;
+    line-height: 28px;
+    text-align: center;
+    margin: 0;
+    padding-bottom: 20px;
+    color: white;
+}
+#frm-signup button {
+    float: right;
+    border: none;
+    border-radius: 14px;
+    color: white;
+    background: #333333;
+    font: 22px 'Changa One', cursive;
+    text-transform: uppercase;
+    line-height: 26px;
+    padding: 10px 34px;
+
+}
+.date {
+    text-align: center;
+    background: #73c926;
+    color: white;
+    font: 30px 'Changa One', cursive;
+    line-height: 30px;
+    padding-top: 8px;
+    border-radius: 14px;
+    margin: 10px 0;
+}
+
+footer {
+    background: url(../images/bg.gif) 0 center repeat;
+    text-align: center;
+    padding: 20px;
+    
+}
+
+footer li {
+    display: inline-block;
+    padding: 0 90px 15px 0;
+}
+
+footer li {
+    display: inline-block;
+    padding: 0 90px 15px 0;
+}
+
+footer a {
+    color: #7c7c7c;
+    text-decoration: none;
+}
+
+footer nav a,
+footer a:hover {
+    color: white;
+    text-decoration: none;
+}
+
+footer nav a:hover,
+footer nav .active a {
+    color: #fa97c2;
+
+}
+
+/* about page */
+
+#small-banner {
+    background: url(../images/bg_slider.gif) center top repeat;
+    padding: 0.25cm;
+    content: "";
+}
+
+.round-img {
+    border: none;
+    border-radius: 15px;
+    float: left;
+    margin-right: 15px;
+}
+
+#testimonials .col {
+    background: url(../images/quot.png) top left no-repeat;
+    padding-left: 50px;
+}
+
+#testimonials h3 {
+    margin-left: -10px;
+}
+.img-rounded {
+    border-radius: 1em;
+}
 
 
 
