--- a/css/banner.css
+++ b/css/banner.css
@@ -1,28 +1,28 @@
 @media screen and (min-width: 768px) {
    
-#logo {
+#banner > .container {
     position: relative;
+    padding: 110px 0 40px;
 }
 
-#logo::after {
+#banner > .container::before {
     position: absolute;
     content: "";
     background: url(../images/logo_bg.png) 0 0 no-repeat;
     width: 188px;
     height: 133px;
-    bottom: -140px;
-    left: -2px;
+    top: 0;
+    left: 0;
+
 }
-#frm-search {
-    position: relative;
-}
-#frm-search::after {
+
+#banner > .container::after {
     position: absolute; /* vi tri tuyet doi, hinh tren di dau thi hinh duoi cung di theo */
     content: "";
     background: url(../images/search_bg.png) 0 0 no-repeat;
     width: 230px;
     height: 44px;
-    bottom: -73px;
-    left: 10px;
+    top: 0;
+    right: 0;
 }
 }
